--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>HELLO GUYS THIS IS MY FIRST REPOSITORY FILE</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>portfolio</title>
+    <link rel="stylesheet" href="sign.css" />
+  </head>
+  <body>
+    <div class="signup-container">
+      <form class="signup-form">
+        <h2 id="f1">sign Up</h2>
+        <div id="f2">
+          <input type="Name" name="Name" placeholder="user-Name" />
+          <br />
+          <br />
+          <input type="email" name="email" placeholder="Email-Id" />
+          <br />
+          <br />
+          <input
+            type="password"
+            name="password"
+            placeholder="Create Password"
+          />
+          <br />
+          <br />
+          <input
+            type="password"
+            name="password"
+            placeholder="Confirm password"
+          />
+        </div>
+        <pre>
+        <a href="http://127.0.0.1:5500/login.html"></a>
+        <button id="f3">Sign-In</button>
+
+    <p>Already have an account? <a href="http://127.0.0.1:5500/login.html" id="f6">Login </a></p>
+     <p>      -----Or-----</p>
+    </pre>
+        <div id="f4">
+          <img src="google.jpg" height="20px" alt="google" />
+          <a href="https://www.google.co.in/">Sign With Google</a>
+        </div>
+      </form>
+    </div>
+  </body>
 </html>
